k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: overnit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page-svc
            port:
              number: 80
  - host: www.overnit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page-svc
            port:
              number: 80
